Prevent scrollbar from moving content left when it appears

--- a/client/stylesheets/readme-db.css
+++ b/client/stylesheets/readme-db.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 #top {
     margin-top: 40px;
     margin-bottom: 40px;
